Add profile page: implement user profile functionality with visit tracking and achievements

--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,10 @@
     ],
     "rewrites": [
       {
+        "source": "/profile",
+        "destination": "/profile.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
