--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
+  "name": "ambulance-hospitaltracker",
+  "version": "1.0.0",
+  "description": "Hospital & Ambulance Trust Tracker",
+  "scripts": {
+    "build": "echo 'No build step required for static HTML project'",
+    "start": "npx http-server public -p 8080",
+    "dev": "npx http-server public -p 8080 -o",
+    "deploy": "firebase deploy",
+    "serve": "firebase serve"
+  },
   "dependencies": {
     "firebase": "^11.10.0",
     "firebase-tools": "^14.10.1"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1"
   }
 }
