Implement Firestore data handling and default data initialization in profile.html and index.html. Add rewrites and redirects in firebase.json for improved routing and user experience. Enhance user data management by merging Firestore data with local data and initializing default data for new users.

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,15 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      { "source": "/", "destination": "/index.html" },
+      { "source": "/profile", "destination": "/profile.html" }
+    ],
+    "redirects": [
+      { "source": "/test.html", "destination": "/login.html", "type": 302 },
+      { "source": "/404.html", "destination": "/login.html", "type": 302 }
+      // Add more redirects here for any other HTML files you want to protect
     ]
   },
   "firestore": {
